--- a/src/c3p0.properties
+++ b/src/c3p0.properties
@@ -1,7 +1,7 @@
-c3p0.jdbcUrl=jdbc:mysql://localhost:3306/in
-c3p0.driverClass=com.mysql.jdbc.Driver
-c3p0.user=root
-c3p0.password=wangjia
+c3p0.jdbcUrl=jdbc:oracle:thin:@10.10.10.2:1521:orcl
+c3p0.driverClass=oracle.jdbc.driver.OracleDriver
+c3p0.user=yljzn
+c3p0.password=yljzn
 
 c3p0.acquireIncrement=3	
 c3p0.idleConnectionTestPeriod=60	
