--- a/src/db.properties
+++ b/src/db.properties
@@ -1,4 +1,4 @@
-db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/in
-db.username=root
-db.password=wangjia
+db.driverClassName=oracle.jdbc.driver.OracleDriver
+db.url=jdbc:oracle:thin:@10.10.10.2:1521:orcl
+db.username=yljzn
+db.password=yljzn
